--- a/myneibourhood/templates/navbar.html
+++ b/myneibourhood/templates/navbar.html
@@ -11,7 +11,7 @@
     <div class="container-fluid">
         {% if user.is_authenticated %}
         <a href="{% url 'profile' user.username %}">
-            <img class="rounded-circle nav-img" src="{{ user.profile.profile_picture.url }}" alt="">
+            <img class="rounded-circle nav-img"  alt="">
             &nbsp; <span class="text-white">{{user.username|title}}</span>
         </a>
         {% else %}
