--- a/myneibourhood/static/css/styles.css
+++ b/myneibourhood/static/css/styles.css
@@ -253,7 +253,7 @@ ul.CTAs a {
 }
 .bpic{
     background-image: url("	https://readdork.com/wp-content/uploads/2020/11/The-Neighbourhood-26.jpg");
-    height: auto;
+    height: 1000px;
     background-repeat: no-repeat;
     background-size: cover;
 }
