--- a/myneibourhood/templates/all_hoods.html
+++ b/myneibourhood/templates/all_hoods.html
@@ -4,10 +4,10 @@
 <div class="container">
         <a href="{% url 'new-hood' %}" class="btn btn-sm btn-info mb-2"> Add New</a>
     <div class="row">
-        {% for hood in all_hoods %}
+        {% for neighbourhood in all_hoods %}
         <div class="col-md-4">
             <div class="card mb-4" style="min-height:340px">
-                <img src="{{ hood.hood_logo.url }}" class="card-img-top" alt="{{ hood.name }}" style="width: auto; height:20rem;">
+                <img src="{{ myneibourhood.hood_logo.url }}" alt="hood-img" class="card-img-top" alt="{{ hood.name }}" style="width: auto; height:20rem;">
                 <div class="card-body">
                     <h6 class="card-title">{{ hood.name }}  ({{hood.location}}) <span class="ml-4">{{hood.members.count}} member{{hood.members.count|pluralize}}</span></h6>
                     <p class="card-text">{{hood.description}}</p>
@@ -20,6 +20,9 @@
             </div>
         </div>
         {% endfor %}
+    </div>
+    <div>
+        <p>ggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg</p>
     </div>
 </div>
 {% endblock %}
