--- a/myneibourhood/templates/registration/signup.html
+++ b/myneibourhood/templates/registration/signup.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container">
+<div class="container sign" >
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-            <form action="" method="post" novalidate>
+            <form action="" method="post" novalidate >
                 {% csrf_token %}
                 {{ form|crispy }}
                 <button class="btn btn-sm btn-info">Sign Up</button>
@@ -16,3 +16,4 @@
 </div>
 
 {% endblock %}
+
